# nozed

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  editor.cfg  meshz.sublime-project  meshz.sublime-workspace  nozed.sublime-project  nozed.sublime-workspace
.claude/: settings.local.json
.noz/: user.cfg
assets/meshes/: asset_icon_bin.mesh  asset_icon_event.mesh  asset_icon_font.mesh  asset_icon_shader.mesh  asset_icon_sound.mesh  asset_icon_vfx.mesh  icon_expand_down.mesh  shader.mesh  test.mesh  ui_icon_loop.mesh  ui_icon_mirror.mesh  ui_icon_onion.mesh  ui_icon_root_motion.mesh  ui_icon_root_motion_off.mesh
assets/shaders/: solid.glsl
assets/ui/: command_palette.styles  mesh_editor.styles  notifications.styles  view.styles
docs/: knife_cut_actions.md
res/windows/: nozed.rc
src/: asset_data.cpp  asset_data.h  asset_editor.cpp  asset_editor.h  asset_importer.h  asset_manifest.cpp  asset_manifest.h  assets.cpp  assets.h  build.cpp  command.cpp  commands.cpp  editable_mesh.cpp  editor.cpp  editor.h  editor_assets.cpp  editor_assets.h  editor_mesh.cpp  editor_mesh.h  editor_server.cpp  file_helpers.cpp  file_helpers.h  file_watcher.cpp  game_assets.cpp  gltf.cpp  gltf.h  gltf_load.cpp  gltf_save.cpp  grid.cpp  importer.cpp  inspector.cpp  main.cpp  notifications.cpp  nozed_assets.cpp  nozed_assets.h  pch.h  props.cpp  props.h  rect_packer.cpp  server.h  (+10 more)
src/asset/: animated_mesh_data.cpp  animated_mesh_data.h  animated_mesh_editor.cpp  animation_data.cpp  animation_data.h  animation_editor.cpp  animation_editor.h  asset_data.cpp  asset_data.h  bin_data.cpp  bin_data.h  editor_animation.cpp  editor_animation.h  editor_asset.cpp  editor_asset.h  editor_mesh.cpp  editor_mesh.h  editor_skeleton.cpp  editor_skeleton.h  editor_vfx.cpp  editor_vfx.h  event_data.cpp  event_data.h  font_data.cpp  font_data.h  mesh_data.cpp  mesh_data.h  mesh_editor.cpp  mesh_editor.h  shader_data.cpp  shader_data.h  skeleton_data.cpp  skeleton_data.h  skeleton_editor.cpp  skeleton_editor.h  sound_data.cpp  sound_data.h  texture_data.cpp  texture_data.h  texture_editor.cpp  (+4 more)
src/asset_editor/: animation_editor.cpp  asset_editor.cpp  asset_editor.h  draw_utils.cpp  editable_asset.cpp  editable_mesh.cpp  editor_asset.cpp  game_assets.h  gltf_load.cpp  gltf_save.cpp  grid.cpp  mesh_editor.cpp  notifications.cpp  shortcut.cpp  skeleton_editor.cpp  undo.cpp  view.cpp
src/import/: animated_mesh_importer.cpp  animation_importer.cpp  asset_importer.h  asset_manifest.cpp  asset_manifest.h  bin_importer.cpp  event_importer.cpp  font_importer.cpp  importer.cpp  mesh_importer.cpp  shader_importer.cpp  skeleton_importer.cpp  sound_importer.cpp  style_sheet_importer.cpp  texture_importer.cpp  vfx_importer.cpp
src/importers/: animation_importer.cpp  font_importer.cpp  mesh_importer.cpp  shader_importer.cpp  sound_importer.cpp  style_sheet_importer.cpp  texture_importer.cpp  vfx_importer.cpp
src/msdf/: Contour.cpp  Contour.h  Edge.cpp  Edge.h  Math.cpp  Math.h  Shape.cpp  Shape.h  SignedDistance.cpp  SignedDistance.h  msdf.cpp  msdf.h
src/tools/: box_select.cpp  knife.cpp  move.cpp  rotate.cpp  scale.cpp  select.cpp  vertex_weight.cpp  weight.cpp
src/ttf/: TrueTypeFont.cpp  TrueTypeFont.h  TrueTypeFontReader.cpp  TrueTypeFontReader.h
src/tui/: screen.cpp  screen.h  terminal.h  text_input.cpp  text_input.h  tstring.cpp  tstring.h  windows_terminal.cpp
src/utils/: draw_utils.cpp  file_helpers.cpp  file_helpers.h  file_watcher.cpp  file_watcher.h  props.cpp  props.h  rect_packer.h  shader_reflect.cpp  tokenizer.cpp  tokenizer.h  ui_utils.cpp
src/views/: animation_view.cpp  log_view.cpp  log_view.h  mesh_editor.cpp  mesh_view.cpp  skeleton_editor.cpp  skeleton_view.cpp  texture_editor.cpp  tree_view.cpp  tree_view.h  view_animation.cpp  view_mesh.cpp  view_skeleton.cpp  views.h
